# omnidirectional_robot

./: README.md
omnidirectional_driver/: CMakeLists.txt  package.xml  setup.py
omnidirectional_driver/src/omnidirectional_driver/: omnidirectional_driver.py
omnidirectional_node/: CMakeLists.txt  package.xml
omnidirectional_node/launch/: bringup.launch
omnidirectional_node/nodes/: omnidirectional.py
omnidirectional_robot/: CMakeLists.txt  package.xml
